# Mirage-

./: AGENTS.md  Cargo.toml  Makefile  README.md  build.rs  mirage.conf
.cargo/: config.toml
boot/: manifest.mock.toml
boot/limine/: limine.conf
config/: MirageConfig.toml  MirageConfig.toml.bak-renoir-mtss
configs/: full-boot.mirage.conf  qemu-framebuffer.mirage.conf  qemu-minimal.mirage.conf  ryzen-dev.mirage.conf
crates/mirage-abi/: Cargo.toml
crates/mirage-acpi/: Cargo.toml
crates/mirage-ahci/: Cargo.toml
crates/mirage-ahci/src/: lib.rs
crates/mirage-amd-chipset/: Cargo.toml
crates/mirage-amd-chipset/src/: lib.rs  renoir.rs
crates/mirage-amd-iommu/: Cargo.toml
crates/mirage-amd-iommu/src/: lib.rs
crates/mirage-amd64/: Cargo.toml
crates/mirage-amd64/src/: cache.rs  cpuid.rs  instructions.rs  lib.rs  msr.rs  topology.rs
crates/mirage-amdgpu/: Cargo.toml
crates/mirage-amdgpu/src/: lib.rs
crates/mirage-block/: Cargo.toml
crates/mirage-boot/: Cargo.toml
crates/mirage-cap/: Cargo.toml
crates/mirage-device-db/: Cargo.toml
crates/mirage-fb/: Cargo.toml
crates/mirage-gpu/: Cargo.toml
crates/mirage-gpu/src/: lib.rs
crates/mirage-hw/: Cargo.toml
crates/mirage-hw/src/: lib.rs
crates/mirage-ipc/: Cargo.toml
crates/mirage-mtss/: Cargo.toml
crates/mirage-nvme/: Cargo.toml
crates/mirage-pci/: Cargo.toml
crates/mirage-platform/: Cargo.toml
crates/mirage-platform/src/: lib.rs  timer.rs
crates/mirage-ryzen/: Cargo.toml.bak-renoir-mtss
crates/mirage-storage/: Cargo.toml
crates/mirage-storage/src/: lib.rs
crates/mirage-usb/: Cargo.toml
crates/mirage-usb/src/: lib.rs
devices/db/: aliases.toml
docs/: AHCI_HW.md  AMDGPU.md  AMDGPU_EARLY.md  AMD_CHIPSET.md  AMD_IOMMU.md  AMD_PLATFORM.md  AMD_PLATFORM_REFERENCES.md  AMD_TELEMETRY.md  AMD_TIMERS.md  BLOCK_LAYER.md  BOOT_MODULE_POLICY.md  BOOT_STATUS.md  DISPLAY_STACK.md  FRAMEBUFFER.md  FRAMEBUFFER_HW.md  INTERRUPT_OWNERSHIP.md  MEMORY_OWNERSHIP.md  MTSS.md  NVME_HW.md  PLATFORM_SERVICE.md  REAL_HARDWARE.md  ROOTFS_PATH.md  STORAGE_DRIVERS.md  USERSPACE_LOADER_PLAN.md  XHCI_USB_STORAGE.md  architecture.md  boot-flow.md  boot-runtime.md  boot_debug.md  boot_framebuffer.md  boot_phase_manager.md  dispatch-rs.md  input-keyboard-drivers.md  linux-posix-compatibility.md  memory_management.md  mirage-dispatch-rs.md  mirageconfig.md  mtss.md  platform-discovery.md  qemu.md  (+7 more)
docs/architecture/: mirage-vs-zinnia.md
docs/audits/: ahci-full-bringup-audit.md  amd-4500u-usb-platform-audit.md  bare-metal-boot-diagnostics-audit.md  bootdiag-slowdown-audit.md  device-database-audit.md  ext4-readwrite-audit.md  full-boot-audit.md  full-userspace-bringup-audit.md  i8042-ps2-keyboard-audit.md  i8042-ps2-regression-audit.md  kso-boot-orchestrator-audit.md  linux-xhci-amd-renoir-reference-audit.md  mtss-pid1-handoff-eligibility-audit.md  mtss-production-audit.md  pid1-boot-order-audit.md  post-mtss-boot-continuation-audit.md  qemu-pid1-boot-audit.md  renoir-mtss-supervisor-audit.md  renoir-xhci-pid1-audit.md  repo-cleanup-spider-rs-audit.md  ryzen-platform-bare-metal-audit.md  spider-rs-pid1-handoff-audit.md  spider-rs-systemd-like-bringup-audit.md  storage-ahci-block-partition-bootrt-audit.md  storage-ahci-m2-qfs-audit.md  storage-stack-audit.md  zinnia-input-driver-audit.md  zinnia-reference-audit.md  zinnia-xhci-nvme-driver-audit.md
docs/boot/: bare-metal-diagnostics.md  boot-flow.md  boot-milestone-1.1.md  bootdiag-performance.md  device-probe-policy.md  framebuffer-diagnostics.md  framebuffer-failure-screen.md  full-boot.md  live-milestone-ui.md  pid1-handoff.md  post-mtss-continuation.md  qemu-boot.md  qemu-driver-matrix.md  qemu-pid1.md  spider-rs-pid1-dispatcher.md  spider-rs-pid1-handoff.md  virtualbox-boot.md
docs/bringup/: supervisor-mtss-spider-pid1.md
docs/config/: mirageconfig-menuconfig.md
docs/devices/: block-char-input-database.md  cpu-chipset-database.md  device-database.md  device-descriptor-schema.md  pci-database.md  usb-database.md
docs/drivers/: i8042.md  input.md  nvme.md  pci-mmio-dma.md  ps2-keyboard.md  usb-hid-keyboard.md  usb.md  xhci.md
docs/fs/: ext4-write-support.md  ext4.md  qfs.md
docs/hardware/: amd-ryzen-4500u.md
docs/input/: i8042-ps2-keyboard.md  input-subsystem.md
docs/kernel/: kso-policy-schema.md  kso-vs-systemd.md  kso.md  mtss-preemption.md  mtss-process-lifecycle.md  mtss-readiness.md  mtss.md
docs/legacy/: subkernel.md
docs/milestones/: boot-milestone-1.0.md  boot-milestone-1.1.md  userspace-init-qemu.md
docs/platform/: amd-renoir-4500u.md  amd-renoir-kernel-mtss-supervisor.md  amd-renoir-xhci.md  amd-ryzen-4500u-renoir.md  dell-inspiron-5505-keyboard.md  ryzen-platform-fault-hardening.md
docs/security/: boot-runtime-security.md
docs/storage/: ahci.md  atapi.md  block-layer.md  gpt.md  m2-storage.md  mbr.md  nvme.md  partitions.md
docs/usb/: hid-keyboard.md  usb-core.md  xhci.md
docs/userspace/: elf-loader.md  m1-terminal.md  mirage-m1-terminal.md  pid1-handoff.md  ring3-transition.md  spider-rs-pid1.md  spider-rs.md  spider-rsd-dispatcher.md  spider-units.md  syscall-abi.md  syscalls.md  system-dispatcher.md
linker/: x86_64.ld
scripts/: qemu-smoke.sh  x86_64-boot-smoke.sh
src/: boot.rs  lib.rs  libc.rs  librust.rs  main.rs  stdlib.rs
src/arch/: mod.rs
src/kernel/: block.rs  boot_diagnostics.rs  boot_phase.rs  boot_runtime.rs  boot_screen.rs  boot_status.rs  cpu.rs  debug_shell.rs  device.rs  (+21 more)
targets/: x86_64-mirage.json
tools/: build-qemu-image.sh  check-boot-order.sh  check-qemu-image.sh  run-qemu-debug.sh  run-qemu-headless.sh  run-qemu.sh  run-virtualbox.sh  validate-boot-runtime.sh  verify-kernel-elf.sh  verify-seed-rs-elf.sh
userspace/spider-rs/: Cargo.toml
userspace/spider-rs/src/: bin_m1_terminal.rs  bin_spider_rsd.rs  graph.rs  lib.rs  log.rs  main.rs  manager.rs  parser.rs  process.rs  service.rs  start.rs  syscall.rs  syscall.rs.bak  target.rs  units.rs
userspace/spider-rs/units/: basic.target  default.target  emergency.target  getty.service  m1-terminal.service  multi-user.target  shell.service
(+183 files in other folders)
