[workspace]
members = [
    ".",
    "crates/mirage-ahci",
    "crates/mirage-amd-chipset",
    "crates/mirage-amd-iommu",
    "crates/mirage-amd64",
    "crates/mirage-amdgpu",
    "crates/mirage-block",
    "crates/mirage-boot",
    "crates/mirage-cap",
    "crates/mirage-fb",
    "crates/mirage-gpu",
    "crates/mirage-hw",
    "crates/mirage-ipc",
    "crates/mirage-nvme",
    "crates/mirage-pci",
    "crates/mirage-platform",
    "crates/mirage-ryzen",
    "crates/mirage-storage",
    "crates/mirage-usb",
]
resolver = "2"

[package]
name = "mirage"
version = "0.1.0"
edition = "2021"
authors = ["Mirage Kernel Authors"]
description = "A conceptual 64-bit microkernel-style operating system core written in Rust"
license = "MIT OR Apache-2.0"

[lib]
name = "mirage"
path = "src/lib.rs"
crate-type = ["staticlib", "rlib"]

[[bin]]
name = "mirage-kernel"
path = "src/main.rs"
test = false
bench = false

[[bin]]
name = "qfsprogs"
path = "src/bin/qfsprogs.rs"
required-features = ["qfs-std"]

[features]
default = ["mock"]
mock = []
hw-pci = []
hw-amd64 = []
hw-ryzen = ["hw-amd64"]
hw-amd-chipset = ["hw-ryzen", "hw-pci"]
hw-amd-iommu = ["hw-ryzen", "hw-pci"]
hw-amd-telemetry = ["hw-ryzen"]
hw-nvme = ["hw-pci"]
hw-ahci = ["hw-pci"]
hw-xhci = ["hw-pci"]
hw-framebuffer = []
full-boot = []
hw-amdgpu = ["hw-pci", "hw-framebuffer"]
# Enables host/testing QFS adapters backed by the Rust standard library.
qfs-std = ["dep:mirage-block", "dep:mirage-storage"]

[dependencies]
# The default kernel build is strictly no_std; the Mirage target builds the
# Rust `alloc` crate from source so kernel `Box`/`Vec` users route through the
# skeleton heap allocator instead of implying a production memory subsystem.
mirage-block = { path = "crates/mirage-block", optional = true }
mirage-storage = { path = "crates/mirage-storage", optional = true }
mirage-platform = { path = "crates/mirage-platform" }

[package.metadata.mirage]
target = "x86_64-mirage"
build-std = ["core", "alloc", "compiler_builtins"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dev-dependencies]
mirage-boot = { path = "crates/mirage-boot" }
