[workspace]
members = [
    ".",
    "tools/mirageconfig",
    "tools/mk-runtime-image",
    "tools/gen-device-db",
    "crates/mirage-abi",
    "crates/mirage-acpi",
    "crates/mirage-ahci",
    "crates/mirage-amd-chipset",
    "crates/mirage-amd-iommu",
    "crates/mirage-amd64",
    "crates/mirage-amdgpu",
    "crates/mirage-block",
    "crates/mirage-boot",
    "crates/mirage-cap",
    "crates/mirage-device-db",
    "crates/mirage-fb",
    "crates/mirage-gpu",
    "crates/mirage-hw",
    "crates/mirage-ipc",
    "crates/mirage-mtss",
    "crates/mirage-nvme",
    "crates/mirage-pci",
    "crates/mirage-platform",
    "crates/mirage-ryzen",
    "crates/mirage-storage",
    "crates/mirage-usb",
    "userspace/spider-rs",
]
resolver = "2"

[package]
name = "mirage"
version = "0.1.0"
edition = "2021"
authors = ["Mirage Kernel Authors"]
description = "A conceptual 64-bit microkernel-style operating system core written in Rust"
license = "MIT OR Apache-2.0"

[lib]
name = "mirage"
path = "src/lib.rs"
crate-type = ["staticlib", "rlib"]

[[bin]]
name = "mirage-kernel"
path = "src/main.rs"
test = false
bench = false

[[bin]]
name = "qfsprogs"
path = "src/bin/qfsprogs.rs"
required-features = ["qfs-std"]

[features]
default = ["mock"]
mock = []
hw-pci = ["mirage-platform/hw-pci"]
hw-acpi = []
hw-amd64 = ["mirage-platform/hw-amd64"]
hw-ryzen = ["hw-amd64", "mirage-platform/hw-ryzen"]
hw-amd-chipset = ["hw-ryzen", "hw-pci", "mirage-platform/hw-amd-chipset"]
hw-amd-iommu = ["hw-ryzen", "hw-pci", "hw-acpi", "mirage-platform/hw-amd-iommu"]
hw-amd-telemetry = ["hw-ryzen", "mirage-platform/hw-amd-telemetry"]
hw-nvme = ["hw-pci"]
hw-ahci = ["hw-pci"]
hw-xhci = ["hw-pci"]
hw-i8042 = []
hw-ps2-keyboard = ["hw-i8042", "hw-keyboard"]
hw-usb-hid = ["hw-xhci", "hw-keyboard"]
hw-acpi-ec = ["hw-acpi"]
hw-laptop-hotkeys = ["hw-acpi-ec", "hw-keyboard"]
hw-keyboard = []
hw-framebuffer = ["dep:mirage-fb", "mirage-fb/hw-framebuffer"]
full-boot = []
emergency-boot = []
seed-rs-qemu-emergency = ["emergency-boot"]
hw-amdgpu = ["hw-pci", "hw-framebuffer"]
hw-apu-renoir = ["hw-amd64", "hw-ryzen", "hw-amd-chipset", "hw-acpi", "hw-pci"]
hw-ryzen-4500u = ["hw-apu-renoir"]
# Enables host/testing QFS adapters backed by the Rust standard library.
qfs-std = ["dep:mirage-block", "dep:mirage-storage"]
bootdiag = []
# Enables raw COM1 breadcrumbs for the seed-rs/BootInfo handoff. Kept off by
# default so normal boots show concise failures without repeated success markers.
boot-trace = ["bootdiag-serial"]
bootdiag-verbose = ["boot-trace"]
bootdiag-framebuffer = ["bootdiag", "hw-framebuffer"]
bootdiag-serial = ["bootdiag"]
bootdiag-raw-hw = ["bootdiag-verbose"]

# Renoir/MTSS platform bring-up features.
hw-renoir-kernel-boot = ["hw-ryzen", "hw-amd-chipset", "hw-pci"]
mtss-scheduler-modules = []
mtss-sched-amd-zen2-renoir = ["mtss-scheduler-modules", "hw-renoir-kernel-boot"]
supervisor-renoir-mtss-policy = ["mtss-sched-amd-zen2-renoir"]
hw-x86_64-apic = ["hw-acpi"]
hw-ioapic = ["hw-x86_64-apic"]
hw-renoir-baremetal-interrupts = ["hw-renoir-kernel-boot", "hw-x86_64-apic", "hw-ioapic", "mtss-sched-amd-zen2-renoir", "supervisor-renoir-mtss-policy"]

[dependencies]
# The default kernel build is strictly no_std; the Mirage target builds the
# Rust `alloc` crate from source so kernel `Box`/`Vec` users route through the
# skeleton heap allocator instead of implying a production memory subsystem.
mirage-abi = { path = "crates/mirage-abi" }
mirage-device-db = { path = "crates/mirage-device-db" }
mirage-block = { path = "crates/mirage-block", optional = true }
mirage-storage = { path = "crates/mirage-storage", optional = true }
mirage-fb = { path = "crates/mirage-fb", optional = true }
mirage-platform = { path = "crates/mirage-platform" }
mirage-mtss = { path = "crates/mirage-mtss", default-features = false }

[package.metadata.mirage]
target = "x86_64-mirage"
build-std = ["core", "alloc", "compiler_builtins"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dev-dependencies]
mirage-boot = { path = "crates/mirage-boot" }
