[package]
name = "mirage-ahci"
version = "0.1.0"
edition = "2021"
authors = ["Mirage Kernel Authors"]
description = "Mock AHCI/SATA driver service primitives for Mirage block storage"
license = "MIT OR Apache-2.0"

[dependencies]
mirage-block = { path = "../mirage-block" }
mirage-cap = { path = "../mirage-cap" }
mirage-ipc = { path = "../mirage-ipc" }
