[package]
name = "mirage-amdgpu"
version = "0.1.0"
edition = "2021"
authors = ["Mirage Kernel Authors"]
description = "AMDGPU driver service skeleton for Mirage graphics"
license = "MIT OR Apache-2.0"

[dependencies]
mirage-cap = { path = "../mirage-cap" }
mirage-fb = { path = "../mirage-fb" }
mirage-gpu = { path = "../mirage-gpu" }
mirage-hw = { path = "../mirage-hw", optional = true }
mirage-pci = { path = "../mirage-pci", optional = true }

[features]
default = []
hw-amdgpu = ["mirage-hw", "mirage-pci"]
