[package]
name = "mirage-gpu"
version = "0.1.0"
edition = "2021"
authors = ["Mirage Kernel Authors"]
description = "Capability-mediated GPU and display service primitives for Mirage"
license = "MIT OR Apache-2.0"

[dependencies]
mirage-cap = { path = "../mirage-cap" }
mirage-fb = { path = "../mirage-fb" }
