[package]
name = "spider-rs"
version = "0.1.0"
edition = "2021"
authors = ["Mirage Kernel Authors"]
description = "no_std userspace PID 1 and service manager for GNU/Mirage"
license = "MIT OR Apache-2.0"

[features]
default = ["host-tools"]
host-tools = []

[dependencies]

[[bin]]
name = "spider-rs"
path = "src/main.rs"
test = false
bench = false
