[package]
name = "spider-rs"
version = "0.1.0"
edition = "2021"
authors = ["Mirage Kernel Authors"]
description = "no_std userspace PID 1 and service manager for GNU/Mirage"
license = "MIT OR Apache-2.0"

[features]
default = []
host-tests = []

[dependencies]
mirage-abi = { path = "../../crates/mirage-abi" }

[[bin]]
name = "spider-rs"
path = "src/main.rs"
test = false
bench = false

[[bin]]
name = "spider-rsd"
path = "src/bin_spider_rsd.rs"
test = true
bench = false

[[bin]]
name = "m1-terminal"
path = "src/bin_m1_terminal.rs"
test = false
bench = false

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("mirage"))'] }
